[package]
name = "metabox-sdk"
version = "0.1.0-alpha.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Easy to use MetaBox Tool"
homepage = "https://metabox.rocks/"
repository = "https://github.com/PrimLabs/MetaBox-SDK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "metabox_sdk"
path = "src/lib.rs"

[dependencies]
ic-agent = "0.20.0"
candid = "0.7.16"
ic-cdk = "0.5.6"
serde = "1.0.144"
garcon = "0.2.3"
sha256 = "1.0.3"
rayon = "1.5.3"